Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "CLB Thanh Hóa định chia tay HLV Popov từ Tết",
+    "content": "CLB Thanh Hóa dự kiến sẽ chia tay HLV Velizar Popov từ Tết Nguyên Đán 2025 sau khi đội không thắng 10 trận liên tiếp. Chủ tịch Cao Tiến Đoan đã thông báo quyết định này sau trận thua Hải Phòng 0-1, và HLV Popov sẽ không bị sa thải mà sẽ thanh lý hợp đồng để bảo vệ uy tín cá nhân. Trong lễ ra mắt tân HLV Tomislav Steinbruckner, ông Đoan bày tỏ sự trân trọng đối với những đóng góp của Popov trong thời gian dẫn dắt CLB, nhưng quyết định thay đổi là cần thiết do thành tích không khả quan.",
+    "link": "https://vnexpress.net/clb-thanh-hoa-dinh-chia-tay-hlv-popov-tu-tet-4865184.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "CLB Thanh Hóa sẽ chia tay HLV Popov khi nào?",
+    "answers": [
+      {
+        "text": "Từ Tết Nguyên Đán 2025",
+        "correct": true
+      },
+      {
+        "text": "Cuối mùa giải 2025-2026",
+        "correct": false
+      },
+      {
+        "text": "Sau trận thắng đầu tiên",
+        "correct": false
+      },
+      {
+        "text": "Ngay lập tức sau trận thua Hải Phòng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thanh tra dự án hồ chứa nước hơn 290 tỉ đồng làm hoài không xong",
     "content": "Dự án hồ chứa nước Lộc Đại tại Quảng Nam, với tổng đầu tư hơn 290 tỷ đồng, đang gặp nhiều khó khăn và chậm tiến độ. Tỉnh Quảng Nam đã giao thanh tra toàn diện việc thực hiện dự án này để làm rõ trách nhiệm của các cá nhân và tổ chức liên quan. Mặc dù dự án được kỳ vọng sẽ cải thiện sinh kế cho người dân tại hai xã Quế Hiệp và Quế Thuận, nhưng sau nhiều năm thi công, dự án vẫn chưa hoàn thành do vướng mắc trong công tác giải phóng mặt bằng và thiếu nguyên liệu.",
     "link": "https://tuoitre.vn/thanh-tra-du-an-ho-chua-nuoc-hon-290-ti-dong-lam-hoai-khong-xong-20250324134850285.htm",
@@ -2469,28 +2496,28 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -2527,28 +2554,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
     "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
     "answers": [
       {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
         "correct": true
       },
       {
-        "text": "Lễ hội mùa xuân",
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
         "correct": false
       },
       {
-        "text": "Cuộc thi thể thao quốc gia",
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
         "correct": false
       },
       {
-        "text": "Ngày Quốc tế Phụ nữ",
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -2724,33 +2751,6 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
-    "answers": [
-      {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
-        "correct": true
-      },
-      {
-        "text": "Để xây dựng một cầu mới.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức lễ hội âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do an ninh quốc gia.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -2827,6 +2827,33 @@
       },
       {
         "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
