--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Ông nội' 78 tuổi lãnh 7 năm tù vì hiếp dâm bé gái 4 lần bất thành",
+    "content": "Bị cáo Chau Som Nang, 78 tuổi, đã bị Tòa án nhân dân tỉnh Kiên Giang tuyên phạt 7 năm tù giam về tội hiếp dâm trẻ em. Trong khoảng thời gian từ tháng 12 năm 2022 đến tháng 2 năm 2023, ông đã nhiều lần có hành vi đụng chạm không phù hợp với bé gái 13 tuổi tên T. tại phòng trọ của ông. Mặc dù ông đã cố gắng thực hiện hành vi hiếp dâm, nhưng do dương vật không cương cứng nên không thành công.",
+    "link": "https://tuoitre.vn/ong-noi-78-tuoi-lanh-7-nam-tu-vi-hiep-dam-be-gai-4-lan-bat-thanh-20250324125549907.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 9,
+    "question": "Ông Chau Som Nang đã bị tuyên phạt bao nhiêu năm tù vì tội gì?",
+    "answers": [
+      {
+        "text": "7 năm tù vì hiếp dâm trẻ em",
+        "correct": true
+      },
+      {
+        "text": "5 năm tù vì trộm cắp",
+        "correct": false
+      },
+      {
+        "text": "10 năm tù vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "3 năm tù vì đánh người",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "CLB Thanh Hóa định chia tay HLV Popov từ Tết",
     "content": "CLB Thanh Hóa dự kiến sẽ chia tay HLV Velizar Popov từ Tết Nguyên Đán 2025 sau khi đội không thắng 10 trận liên tiếp. Chủ tịch Cao Tiến Đoan đã thông báo quyết định này sau trận thua Hải Phòng 0-1, và HLV Popov sẽ không bị sa thải mà sẽ thanh lý hợp đồng để bảo vệ uy tín cá nhân. Trong lễ ra mắt tân HLV Tomislav Steinbruckner, ông Đoan bày tỏ sự trân trọng đối với những đóng góp của Popov trong thời gian dẫn dắt CLB, nhưng quyết định thay đổi là cần thiết do thành tích không khả quan.",
     "link": "https://vnexpress.net/clb-thanh-hoa-dinh-chia-tay-hlv-popov-tu-tet-4865184.html",
@@ -1373,33 +1400,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -1426,6 +1426,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -2563,33 +2590,6 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -2643,6 +2643,33 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -2818,6 +2845,33 @@
     ]
   },
   {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -2867,33 +2921,6 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -3829,91 +3856,6 @@
       },
       {
         "text": "Hành vi xúc phạm nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
-    "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
-    "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "HPV có thể gây ra những loại ung thư nào?",
-    "answers": [
-      {
-        "text": "Ung thư cổ tử cung",
-        "correct": true
-      },
-      {
-        "text": "Ung thư da",
-        "correct": false
-      },
-      {
-        "text": "Ung thư phổi",
-        "correct": false
-      },
-      {
-        "text": "Ung thư gan",
-        "correct": false
-      },
-      {
-        "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bánh mì Việt Nam 'nâng cấp' với loại rau ăn kèm có giá hơn nửa triệu đồng/kg",
-    "content": "Trong Lễ hội bánh mì Việt Nam lần 3 diễn ra vào ngày 23 tháng 3 năm 2025, thương hiệu bánh mì Grandma Lu đã giới thiệu một loại rau ăn kèm mới có tên là ngọc long biển, có giá lên tới 650.000 đồng/kg. Loại rau này không chỉ mang lại giá trị dinh dưỡng cao mà còn giúp nâng cao chất lượng món bánh mì truyền thống Việt Nam. Du khách quốc tế rất ưa chuộng sự kết hợp giữa vị truyền thống và hương vị hiện đại của bánh mì khi được ăn kèm với rau này.",
-    "link": "https://tuoitre.vn/banh-mi-viet-nam-nang-cap-voi-loai-rau-an-kem-co-gia-hon-nua-trieu-dong-kg-20250323135432678.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lý do gì khiến bánh mì Grandma Lu trở nên đặc biệt trong lễ hội bánh mì Việt Nam?",
-    "answers": [
-      {
-        "text": "Bánh mì Grandma Lu sử dụng rau ngọc long biển có giá cao và dinh dưỡng tốt.",
-        "correct": true
-      },
-      {
-        "text": "Bánh mì Grandma Lu có giá rất rẻ.",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì Grandma Lu không có sự khác biệt gì so với bánh mì thông thường.",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì Grandma Lu chỉ phục vụ cho khách địa phương.",
         "correct": false
       }
     ]
