Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Agribank - ‘bà đỡ’ cho kinh tế tư nhân",
+    "content": "Agribank tiếp tục đóng vai trò quan trọng trong việc hỗ trợ kinh tế tư nhân, với kế hoạch cung ứng 230.000 tỷ đồng cho vay trong năm 2025, chủ yếu hướng đến các doanh nghiệp tư nhân và hợp tác xã nông nghiệp. Những câu chuyện thành công từ các khách hàng như Hợp tác xã Nga Hải và Công ty Biển Quỳnh cho thấy Agribank không chỉ cung cấp vốn mà còn đồng hành, hỗ trợ trong quá trình phát triển. Ngân hàng này đã thực hiện nhiều chương trình tín dụng ưu đãi, giúp các doanh nghiệp nhỏ và vừa tiếp cận nguồn vốn dễ dàng hơn.",
+    "link": "https://tuoitre.vn/agribank-ba-do-cho-kinh-te-tu-nhan-20250324142533758.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Agribank hỗ trợ như thế nào cho kinh tế tư nhân?",
+    "answers": [
+      {
+        "text": "Bằng cách cung cấp vốn vay ưu đãi cho các doanh nghiệp tư nhân.",
+        "correct": true
+      },
+      {
+        "text": "Bằng cách không cho vay cho doanh nghiệp tư nhân.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách đầu tư vào các dự án lớn của nhà nước.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách giảm lãi suất cho vay cho tất cả doanh nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Ông nội' 78 tuổi lãnh 7 năm tù vì hiếp dâm bé gái 4 lần bất thành",
     "content": "Bị cáo Chau Som Nang, 78 tuổi, đã bị Tòa án nhân dân tỉnh Kiên Giang tuyên phạt 7 năm tù giam về tội hiếp dâm trẻ em. Trong khoảng thời gian từ tháng 12 năm 2022 đến tháng 2 năm 2023, ông đã nhiều lần có hành vi đụng chạm không phù hợp với bé gái 13 tuổi tên T. tại phòng trọ của ông. Mặc dù ông đã cố gắng thực hiện hành vi hiếp dâm, nhưng do dương vật không cương cứng nên không thành công.",
     "link": "https://tuoitre.vn/ong-noi-78-tuoi-lanh-7-nam-tu-vi-hiep-dam-be-gai-4-lan-bat-thanh-20250324125549907.htm",
@@ -2778,33 +2805,6 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -2854,6 +2854,33 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
