Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -220,6 +220,33 @@
     ]
   },
   {
+    "title": "F-16 Ukraine sắp như \"hổ mọc thêm cánh\", thách thức không quân Nga",
+    "content": "Tiêm kích F-16 của Ukraine sẽ sớm được nâng cấp nhờ việc tiếp nhận máy bay cảnh báo sớm và chỉ huy trên không Saab 340 từ Thụy Điển. Điều này giúp tăng cường khả năng phát hiện mục tiêu trên không của F-16, mở rộng phạm vi phát hiện lên đến 100km, gấp 3-4 lần so với radar tiêu chuẩn trước đó. Tuy nhiên, việc vận hành Saab 340 gần tiền tuyến có thể gặp nguy hiểm do hệ thống phòng không Nga, và nếu bị tiêu diệt, khả năng chỉ huy và kiểm soát của không quân Ukraine sẽ bị ảnh hưởng nghiêm trọng.",
+    "link": "https://dantri.com.vn/the-gioi/f-16-ukraine-sap-nhu-ho-moc-them-canh-thach-thuc-khong-quan-nga-20250324144025685.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 8,
+    "question": "F-16 của Ukraine sẽ được nâng cấp như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng cách tiếp nhận máy bay Saab 340 từ Thụy Điển.",
+        "correct": true
+      },
+      {
+        "text": "Bằng việc tăng cường số lượng tiêm kích hiện có.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách cải thiện kỹ thuật lái máy bay.",
+        "correct": false
+      },
+      {
+        "text": "Bằng việc hợp tác với các nước láng giềng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "CLB Thanh Hóa định chia tay HLV Popov từ Tết",
     "content": "CLB Thanh Hóa dự kiến sẽ chia tay HLV Velizar Popov từ Tết Nguyên Đán 2025 sau khi đội không thắng 10 trận liên tiếp. Chủ tịch Cao Tiến Đoan đã thông báo quyết định này sau trận thua Hải Phòng 0-1, và HLV Popov sẽ không bị sa thải mà sẽ thanh lý hợp đồng để bảo vệ uy tín cá nhân. Trong lễ ra mắt tân HLV Tomislav Steinbruckner, ông Đoan bày tỏ sự trân trọng đối với những đóng góp của Popov trong thời gian dẫn dắt CLB, nhưng quyết định thay đổi là cần thiết do thành tích không khả quan.",
     "link": "https://vnexpress.net/clb-thanh-hoa-dinh-chia-tay-hlv-popov-tu-tet-4865184.html",
@@ -1418,60 +1445,6 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
-    "answers": [
-      {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
-        "correct": true
-      },
-      {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -1525,6 +1498,60 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "answers": [
+      {
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "correct": true
+      },
+      {
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "correct": false
+      },
+      {
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -2917,33 +2944,6 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -2993,6 +2993,33 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -3874,33 +3901,6 @@
       },
       {
         "text": "4 người",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khán giả khóc khi xem \"Ngược chiều bình an\" của Nhà hát Kịch Việt Nam",
-    "content": "Vở kịch \"Ngược chiều bình an\" của Nhà hát Kịch Việt Nam đã gây xúc động mạnh cho khán giả khi tái hiện cuộc sống và sự hy sinh của những người lính cứu hỏa. Tác phẩm, do Thiên Ân viết và NSƯT Kiều Minh Hiếu đạo diễn, được công diễn lần đầu vào tối 22/3 và đã khiến nhiều người rơi nước mắt, đặc biệt là ở phân cảnh 3 lính cứu hỏa hy sinh trong đám cháy. Khán giả đã bày tỏ sự cảm ơn đối với các nghệ sĩ vì đã mang đến một tác phẩm chân thực và ý nghĩa về nghề cứu hỏa.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-khoc-khi-xem-nguoc-chieu-binh-an-cua-nha-hat-kich-viet-nam-20250323144127113.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Vở kịch \"Ngược chiều bình an\" nói về điều gì?",
-    "answers": [
-      {
-        "text": "Cuộc sống và sự hy sinh của những người lính cứu hỏa.",
-        "correct": true
-      },
-      {
-        "text": "Những câu chuyện tình yêu lãng mạn.",
-        "correct": false
-      },
-      {
-        "text": "Các vấn đề xã hội hiện nay.",
-        "correct": false
-      },
-      {
-        "text": "Cuộc chiến chống tội phạm.",
         "correct": false
       }
     ]
